# lightdepth

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
docs/: project-report.docx
scripts/: compare_models.py  eval.py  infer.py  train.py
src/lightdepth/: __init__.py
src/lightdepth/data/: __init__.py  dataloader.py  dataset.py  transforms.py
src/lightdepth/models/: __init__.py  decoder.py  encoder.py  lightdepth.py  lightdepth_net.py
src/lightdepth/utils/: __init__.py  config.py  losses.py  metrics.py  visualization.py
